Issue #28277: remove linefeed character from iomodule.h. Patch by Michael Felt